--- a/index.html
+++ b/index.html
@@ -1,19 +1,64 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html lang="es">
+
     <head>
-        <title>titulo</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./webroot/css/estilo.css">
+        <script>
+
+        </script>
+        <title>Pagina principal</title>
     </head>
+
     <body>
-        <a href="">DAW</a>
-        <a href="">DIW</a>
-        <a href="">DWEC</a>
-        <a href="proyectoDWES/indexProyectoDWES.php">DWES</a>
+        <header>
+            <h1>Proyecto DWA</h1>
+            <h2>Luis Puente Fernandez</h2>
+        </header>
+        <main>
+
+            <h2>Proyectos</h2>
+
+
+            <a class="tarjeta" href="./proyectoDWES/indexProyectoDWES.php">
+                <h3>DWES</h3>
+                <div class="info">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum et perspiciatis labore quas, culpa
+                        sequi
+                        iure error ad magnam asperiores. Maxime quia ut consequuntur voluptates.</p>
+                </div>
+            </a>
+            <a class="tarjeta" href="">
+                <h3>DWEC</h3>
+                <div class="info">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum et perspiciatis labore quas, culpa
+                        sequi
+                        iure error ad magnam asperiores. Maxime quia ut consequuntur voluptates.</p>
+                </div>
+            </a>
+            <a class="tarjeta" href="">
+                <h3>DAW</h3>
+                <div class="info">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum et perspiciatis labore quas, culpa
+                        sequi
+                        iure error ad magnam asperiores. Maxime quia ut consequuntur voluptates.</p>
+                </div>
+            </a>
+            <a class="tarjeta" href="">
+                <h3>DIW</h3>
+                <div class="info">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum et perspiciatis labore quas, culpa
+                        sequi
+                        iure error ad magnam asperiores. Maxime quia ut consequuntur voluptates.</p>
+                </div>
+            </a>
+
+        </main>
+
+        <footer>
+            2020-2021 - Luis Puente Fernandez - luis.puefer@educa.jcyl.es <a href=""><img src="./webroot/images/curriculum.png" alt="curriculum" width="32"></a> <a href=""><img src="./webroot/images/gitHub.png" alt="gitHub" height="32"></a>
+        </footer>
     </body>
+
 </html>
