--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         iure error ad magnam asperiores. Maxime quia ut consequuntur voluptates.</p>
                 </div>
             </a>
-            <a class="tarjeta" href="`./LPF2021DAW/index.html">
+            <a class="tarjeta" href="./LPF2021DAW/index.html">
                 <h3>DAW</h3>
                 <div class="info">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum et perspiciatis labore quas, culpa
